--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Hello, world</title>
+		<meta charset="utf-8" />
+		<title>Hello, World</title>
+		<meta name="description" content="index page" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
     </head>
     <body>
-        <h1>Helo, World!</h1>
-        <p>{{ message }}</p>
+        <header>
+            <h1>Helo, World!</h1>
+            <p>{{ message }}</p>
+        </header>
+        <article>
+            <a href="/query_test?query_string=hogepiyo">Queryテストページ</a>
+        </article>
     </body>
 </html>
